--- a/src/js/article/article.html
+++ b/src/js/article/article.html
@@ -50,7 +50,7 @@
       <div class="col-xs-12 col-md-8 offset-md-2">
 
         <div show-authed="true">
-          <list-errors from="$crl.commentForm.errors"></list-errors>
+          <list-errors from="$ctrl.commentForm.errors"></list-errors>
           <form class="card comment-form" ng-submit="$ctrl.addComment()">
             <fieldset ng-disabled="$ctrl.commentForm.isSubmitting">
               <div class="card-block">
